<resources>
    <string name="app_name">Eventos</string>
    <string name="username">ENROLLMENT NO</string>
    <string name="password">PASSWORD</string>
    <string name="signin">SIGN IN</string>
    <string name="problem_text">PROBLEM LOGGING IN?</string>
    <string name="problem_email">your@email.com</string>
    <string name="problem_full_name">Your full name</string>
    <string name="problem_comment">Additional Comments</string>
    <string name="problem_submit">SEND</string>
    <string name="problem_cancel">CANCEL</string>
    <string-array name="drawer_list_1">
        <item>Favorites</item>
        <item>Add your event</item>
    </string-array>
    <string-array name="drawer_list_2">
        <item>About</item>
        <item>Sign Out</item>
    </string-array>
    <string name="shared_title">sharedTitle</string>
    <string name="shared_date">sharedDate</string>
    <string name="about">Eventos brings all the events happening in your organisation in one place, so that you don\'t miss out on any of your
    favorite events</string>
    <string name="version">Version V.1</string>
    <string name="copyright">Copyright © 2016</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_add_your_event">Add/Track your event</string>
    <string name="menu_about">About</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="menu_calendar">Events Calendar View</string>
    <string name="menu_outside_events">Outside Events</string>
    <string name="username_error">Enter valid enrollment no</string>
    <string name="password_error">Enter valid password</string>
    <string name="rating">Rating</string>
    <string name="comments">Comments</string>
    <string name="description">Description</string>
    <string name="requirements">Requirements</string>
    <string name="forums">Submission forums or Links</string>
    <string name="comment_hint">Add your comment</string>
    <string name="recent_comments">Recent comments</string>
    <string name="interested_event_off">No, I am not interested in this event</string>
    <string name="interested_event_on">Yes, I will attend this event</string>
    <string name="attending">Will you be attending this event?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="maybe">Maybe</string>
    <string name="show_more_comments">Show more comments</string>
    <string name="no_events">You don\'t have any events</string>
    <string name="add_new_event">Add new event</string>
    <string name="your_events">Your events</string>
    <string name="walkthrough_start">Get Started</string>
    <string name="imgTrans">imgTrans</string>
    <string name="textTrans">textTrans</string>
    <string name="walkthrough_text">Get your events organised at one place with timely Reminders and Tracking System</string>
    <string name="walkthrough_text_feature_part_one">Confused about which events to attend, Now you don\'t have to thanks to EVENTOS </string>
    <string name="walkthrough_text_feature_part_two">With the rating and review system about the events, the decision making is easier</string>
    <string name="walkthrough_text_feature_part_three">Add Events to your favourite list, so that you don\'t miss out your favourite event. Your Favourite List will be our Priority</string>
    <string name="prefs_previously_started">false</string>
    <string name="new_event_warning">(If you submit false information, false events or try to spam, you will be blocked from using Eventos)</string>
    <string name="new_event_info">Have a new event planned? Use the following forum to submit your event. To see the proper guidelines to fill the form click on</string>
    <string name="menu_event_guidelines">Guidelines</string>
    <string name="title">Title</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="venue">Venue</string>
    <string name="contacts">Contacts</string>
    <string name="name">Name</string>
    <string name="contact_no">Contact number</string>
    <string name="contact_email">Contact email</string>
    <string name="image">Image</string>
    <string name="submit">Submit</string>
    <string name="valid_link">Link to your forum</string>
    <string name="link_name">Name</string>
    <string name="photo_text">Upload photo or provide a link</string>
    <string-array name="guidelines">
        <item>Title word length should be atleast 5–10 letters</item>
        <item>Description should be between 30–50 words. Use this field to describe about the event/hub, don\'t add any unnecessary info here.</item>
        <item>Requirements should me mentioned clearly to the point. If you don\'t have any requirements you can provide your own message, if left empty \'No requirements for this event\' will be shown.</item>
        <item>Venue should contain just the label of the venue. You can add multiple venues by separating them by commas.</item>
        <item>If you add a link to your submission forum, give a proper name. Adding malicious/unrelated links will lead to deletion of the event and the submitter might get blocked. If no link is added \'No submission forum for this event\' will be shown.</item>
        <item>Provide proper name and contact number in contacts. Email is optional but recommended.</item>
        <item>Provide a proper image related to the event/hub. Make sure the size of image is not to high. Default image will be used if you don\'t provide one. Link to the image can also be provided.</item>
    </string-array>
    <string name="close">Close</string>
    <string name="select_avatar">Select an avatar for your event</string>
    <string name="submitted_on">Submitted on</string>
    <string name="verified">Verified</string>
    <string name="num_of_attending">Number of people attending</string>
    <string name="more_details">More Details</string>
    <string name="attending_people">people attending your event</string>
    <string name="totla_rating">Total Ratings</string>
    <string name="average_rating">Avg. Rating</string>
    <string name="stats">Stats</string>
    <string name="refresh">Refresh</string>
    <string name="sync_failed">Unable to fetch new events.</string>
    <string name="form_error_title">Title is too short.</string>
    <string name="form_error_description">Description is too short.</string>
    <string name="form_error_venue">Venue cannot be empty.</string>
    <string name="form_error_image">Provide an image for the event.</string>
    <string name="forum_submission_error">Unable to submit Event Form.</string>
    <string name="submitting_form">Submitting your event form.</string>
    <string name="submission_success">Event submitted successfully. Once verified, your event will show up in the main stream. </string>
    <string name="no_contacts">No contacts for this event</string>
    <string name="email_chooser">Send Mail</string>
    <string name="no_links">No links/form for this event</string>
    <string name="shared_venue">shared_venue</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_password">PASSWORD</string>
    <string name="enter_password_again">ENTER PASSWORD AGAIN</string>
    <string name="password_match_error">Passwords don\'t match</string>
    <string name="full_name_error">Invalid name</string>
    <string name="full_name_empty">Name cannot be left empty</string>
    <string name="signup_password_empty">Password cannot be left blank</string>
    <string name="phone_number_empty_error">Phone number cannot be left blank</string>
    <string name="email_empty_error">Email cannot be left blank</string>
    <string name="enter_email">EMAIL</string>
    <string name="enter_phone">ENTER PHONE NUMBER</string>
    <string name="signup">Sign Up</string>
    <string name="dont_have_account">Don\'t have an account? Sign up</string>
    <string name="email">EMAIL</string>
    <string name="logged_in_as">Logged in as</string>
    <string name="nothingInFavourites">Nothing in Favourites!</string>
    <string name="full_name">FULL NAME</string>
    <string name="edit_account">Edit Account</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="update">Update</string>
    <string name="old_password_match">Old password doesn\'t match</string>
    <string name="password_empty">New Password cannot be empty</string>
    <string name="account_update_success">Account Details Updated</string>
    <string name="account_update_fail">Unable to update detials</string>
    <string name="updating_account_details">Updating Account Details...</string>
    <string name="comment_empty">Comment cannot be empty</string>
    <string name="submitting_comment">Submitting your comment...</string>
    <string name="comment_added_success">Comment added successfully</string>
    <string name="comment_add_fail">Failed to add comment</string>
    <string name="no_comments_found">No Comments Found</string>
    <string name="no_comments">No comments found</string>
    <string name="outside_event_toggle">OUTSIDE EVENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ADD_NEW_OUTSIDE_EVENT">ADD NEW OUTSIDE EVENT</string>
    <string name="shared_avatar">shared_avatar</string>
</resources>
