<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top">
        <item
            android:id="@+id/menu_favorites"
            android:title="@string/menu_favorites"
            android:icon="@drawable/navigation_drawer_favorite"/>
        <item
            android:id="@+id/menu_calendar_view"
            android:title="@string/menu_calendar"
            android:icon="@drawable/navigation_drawer_calendar_view"/>
        <item
            android:id="@+id/menu_add_your_event"
            android:title="@string/menu_add_your_event"
            android:icon="@drawable/navigation_drawer_new_event"
            />
    </group>

    <group
        android:id="@+id/menu_bottom">
        <item
            android:id="@+id/menu_about"
            android:title="@string/menu_about"
            android:icon="@drawable/navigation_drawer_about"/>
        <item
            android:id="@+id/menu_sign_out"
            android:title="@string/menu_sign_out"
            android:icon="@drawable/navigation_drawer_sign_out"/>
    </group>

</menu>