<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context="app.com.thetechnocafe.eventos.SigninActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/fragment_signin_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:src="@drawable/calendar"
                    android:transitionName="@string/imgTrans"/>

                <TextView
                    android:id="@+id/fragment_signin_app_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/app_name"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="40sp"
                    android:transitionName="@string/textTrans"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="0.5"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center|top"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/fragment_signin_username_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="12dp"
                    android:theme="@style/TextLabel"
                    app:errorTextAppearance="@style/TextLayoutErrorText">

                    <EditText
                        android:id="@+id/fragment_signin_username_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/white"
                        android:hint="@string/username"
                        android:inputType="number"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:textColorLink="@android:color/white"
                        android:textCursorDrawable="@null"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/fragment_signin_password_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="8dp"
                    android:theme="@style/TextLabel"
                    app:errorTextAppearance="@style/TextLayoutErrorText">

                    <EditText
                        android:id="@+id/fragment_signin_password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/white"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:textColorLink="@android:color/white"
                        android:textCursorDrawable="@null"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/fragment_signin_singin_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/button_ripple"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp"
                    android:shadowColor="@android:color/white"
                    android:text="@string/signin"
                    android:textColor="@android:color/white"/>

            </LinearLayout>

            <TextView
                android:id="@+id/fragment_signin_problem_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="#651FFF"
                android:gravity="center"
                android:padding="24dp"
                android:text="@string/problem_text"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                />

        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
