<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/walkthrough_background"
              android:orientation="vertical"
              android:weightSum="1">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/calendar"/>


    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="40sp"/>


    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:layout_marginTop="24dp"
        android:text="@string/version"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/version"
        android:layout_marginTop="24dp"
        android:text="@string/copyright"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="16sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/skip1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="12dp"
            android:clickable="true"
            android:foreground="@drawable/ripple"
            android:padding="8dp"
            android:text="SKIP"
            android:textColor="@android:color/white"
            />
    </RelativeLayout>


</RelativeLayout>