<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up_actvity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    tools:context="app.com.thetechnocafe.eventos.SignUpActvity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="0.2"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/fragment_signin_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:src="@drawable/calendar"
                    android:transitionName="@string/imgTrans"/>

            </LinearLayout>

            <TextView
                android:id="@+id/fragment_signin_app_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/sign_up"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="40sp"
                android:transitionName="@string/textTrans"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="0.5"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center|top"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/fragment_signup_username_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="12dp"
                    android:theme="@style/TextLabel"
                    app:errorTextAppearance="@style/TextLayoutErrorText">

                    <EditText
                        android:id="@+id/fragment_signup_email_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/white"
                        android:hint="@string/enter_email"
                        android:inputType="textEmailAddress"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:textColorLink="@android:color/white"
                        android:textCursorDrawable="@null"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/fragment_signup_password_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="8dp"
                    android:theme="@style/TextLabel"
                    app:errorTextAppearance="@style/TextLayoutErrorText">

                    <EditText
                        android:id="@+id/fragment_signup_password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/white"
                        android:hint="@string/enter_password"
                        android:inputType="textPassword"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:textColorLink="@android:color/white"
                        android:textCursorDrawable="@null"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/fragment_signup_password_confirm_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="8dp"
                    android:theme="@style/TextLabel"
                    app:errorTextAppearance="@style/TextLayoutErrorText">

                    <EditText
                        android:id="@+id/fragment_signup_password_confirm_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/white"
                        android:hint="@string/enter_password_again"
                        android:inputType="textPassword"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:textColorLink="@android:color/white"
                        android:textCursorDrawable="@null"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/fragment_signup_phone_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="8dp"
                    android:theme="@style/TextLabel"
                    app:errorTextAppearance="@style/TextLayoutErrorText">

                    <EditText
                        android:id="@+id/fragment_signup_phone_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/white"
                        android:hint="@string/enter_phone"
                        android:inputType="phone"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:textColorLink="@android:color/white"
                        android:textCursorDrawable="@null"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/fragment_signup_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/button_ripple"
                    android:paddingLeft="64dp"
                    android:paddingRight="64dp"
                    android:shadowColor="@android:color/white"
                    android:text="@string/signup"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
